<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTrain"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/layout_margin_left">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/train_name"
        android:id="@+id/edit_train_name"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/trip_duration"
        android:id="@+id/edit_trip_duration"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/train_type"
        android:id="@+id/edit_train_type"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ticket_price"
        android:id="@+id/edit_price"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/train_service"
        android:id="@+id/edit_train_services"/>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/save"
    android:layout_marginTop="@dimen/button_magrin_up"
    android:id="@+id/edit_save"
    android:textColor="@android:color/white"
    android:background="@color/button" />

</LinearLayout>