<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:textSize="32sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_marginBottom="40dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_now"
        android:layout_marginLeft="@dimen/layout_margin_left"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_height="wrap_content"
        android:text="@string/pay_in_train"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/button"
        android:id="@+id/finish"
        android:textColor="@android:color/white"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:text="@string/finish"/>

</LinearLayout>