<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.utu.ututrail.AdminActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_admin"
        android:textSize="30sp"
        android:gravity="center_vertical"
        android:layout_margin="30dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_trip"
        android:background="@color/button"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:id="@+id/varata_lipun"
        android:textColor="@android:color/white"/>
    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:background="@color/button"
        android:textColor="@android:color/white"
        android:text="@string/change_trains"
        android:id="@+id/change_train_info"/>

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/change_users"
        android:layout_margin="30dp"
        android:background="@color/button"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:id="@+id/change_users"/>
    </LinearLayout>


</LinearLayout>
