<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainTypeOrder"
    android:orientation="vertical"
    android:layout_marginTop="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textAlignment="center"
        android:hint="@string/Juna"
        android:layout_marginBottom="20dp"/>

    <TextView
       android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder"
        android:id="@+id/edit_train_name_order"/>
    <TextView
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder"
        android:id="@+id/edit_trip_duration_order"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder"
        android:id="@+id/edit_train_type_order"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder"
        android:id="@+id/edit_price_order"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:id="@+id/edit_train_services_order"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_gravity="end"
        android:id="@+id/edit_save"
        android:layout_marginTop="@dimen/layout_margin_left"
        android:layout_marginRight="@dimen/layout_margin_left"
        android:textColor="@android:color/white"
        android:background="@color/button"
        />

</LinearLayout>